bean processor
